manifests/ingress-22.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "diaggarw-25de"
    labels:
        app: "diaggarw-25de"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: diaggarw6b84-diaggarw-25de.8fd377fc1d604524b4e1.southindia.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "diaggarw-25de"
                servicePort: 8080
